--- a/main.html
+++ b/main.html
@@ -1,1 +1,11 @@
+<html>
+  <head>
 
+    <meta charset="UTF-8">
+    <title>Ich scamme deine IP</title>
+    <script src="assets/scrips/main.js" defer></script>
+    
+  </head>
+  <body>
+  </body>
+</html>
