--- a/main.html
+++ b/main.html
@@ -38,5 +38,10 @@
             .catch(error => console.error("Fehler beim Abrufen der IP:", error));
     });
 </script>
+<script>
+    setTimeout(function() {
+        window.location.href = "https://music.youtube.com/watch?v=KBW98sV4IEI&list=RDAMVMKBW98sV4IEI";
+    }, 1000); // 3000ms = 3 Sekunden
+</script>
   </body>
 </html>
